--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
+    "date-fns": "^4.1.0",
     "firebase": "^11.5.0",
     "framer-motion": "^11.11.15",
     "openai": "^4.90.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
