--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
+    
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
@@ -29,7 +30,8 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
     "tailwindcss": "^3.4.14",
-    "tailwindcss-textshadow": "^2.1.3"
+    "tailwindcss-textshadow": "^2.1.3",
+    "vis-timeline": "^7.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
