--- a/package.json
+++ b/package.json
@@ -14,23 +14,29 @@
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
     "date-fns": "^4.1.0",
+    "fabric": "^6.6.4",
     "firebase": "^11.5.0",
     "framer-motion": "^11.11.15",
+    "konva": "^9.3.20",
+    "lucide-react": "^0.507.0",
     "openai": "^4.90.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-big-calendar": "^1.18.0",
-    
     "react-chartjs-2": "^5.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
+    "react-konva-utils": "^1.1.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
+    "use-image": "^1.1.1",
     "vis-timeline": "^7.7.3"
   },
   "scripts": {
