--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
     "react-konva-utils": "^1.1.0",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
     "use-image": "^1.1.1",
