--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
     "react-toastify": "^11.0.5",
+    "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
+    "three": "^0.176.0",
+    "tsparticles": "^2.12.0",
     "use-image": "^1.1.1",
+    "vanta": "^0.5.24",
     "vis-timeline": "^7.7.3"
   },
   "scripts": {
