--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.4.0",
+    "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
@@ -34,11 +35,13 @@
     "react-konva-utils": "^1.1.0",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
+    "react-roulette": "^0.0.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.4",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
+    "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
     "three": "^0.176.0",
