--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fabric": "^6.6.4",
     "firebase": "^11.5.0",
     "framer-motion": "^11.11.15",
+    "html-to-image": "^1.11.13",
     "idb-keyval": "^6.2.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.507.0",
