--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "fabric": "^6.6.4",
     "firebase": "^11.5.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.11.15",
     "html-to-image": "^1.11.13",
     "idb-keyval": "^6.2.2",
@@ -49,7 +51,11 @@
     "tsparticles": "^2.12.0",
     "use-image": "^1.1.1",
     "vanta": "^0.5.24",
-    "vis-timeline": "^7.7.3"
+    "vis-timeline": "^7.7.3",
+    "workbox-core": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
