--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-spring": "^9.7.4",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
+    "string-similarity": "^4.0.4",
     "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
@@ -84,7 +85,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/react-modal": "^3.16.3"
+    "@types/react-modal": "^3.16.3",
+    "@types/string-similarity": "^4.0.2"
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "tailwind.config.js",
