--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "openai": "^4.90.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.18.0",
     "react-chartjs-2": "^5.2.0",
     "react-color": "^2.19.3",
