--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "idb-keyval": "^6.2.2",
     "konva": "^9.3.20",
     "lucide-react": "^0.507.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.90.0",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
