--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
-[[functions]]
+[functions."sendInactivityNotifications"]
   schedule = "*/1 * * * *" # every 1 minute
   path = "/.netlify/functions/sendInactivityNotifications"
