--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@huggingface/inference": "^3.6.2",
+    "@react-three/drei": "^9.56.15",
+    "@react-three/fiber": "^8.13.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +23,7 @@
     "fabric": "^6.6.4",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.4.0",
-    "framer-motion": "^11.11.15",
+    "framer-motion": "^11.18.2",
     "html-to-image": "^1.11.13",
     "idb-keyval": "^6.2.2",
     "konva": "^9.3.20",
@@ -46,14 +49,16 @@
     "react-roulette": "^0.0.1",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-spring": "^9.7.4",
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
     "string-similarity": "^4.0.4",
     "styled-jsx": "^5.1.7",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
-    "three": "^0.176.0",
+    "three": "^0.152.2",
     "tsparticles": "^2.12.0",
     "use-image": "^1.1.1",
     "vanta": "^0.5.24",
