--- a/package.json
+++ b/package.json
@@ -16,17 +16,27 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
+    "@tiptap/extension-link": "^3.0.9",
+    "@tiptap/extension-text-style": "^3.0.9",
+    "@tiptap/extension-underline": "^3.0.9",
+    "@tiptap/react": "^3.0.9",
+    "@tiptap/starter-kit": "^3.0.9",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.20",
     "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "fabric": "^6.6.4",
     "firebase": "^11.5.0",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^11.18.2",
+    "html-to-draftjs": "^1.5.0",
     "html-to-image": "^1.11.13",
     "idb-keyval": "^6.2.2",
+    "jodit-react": "^5.2.19",
     "konva": "^9.3.20",
     "lucide-react": "^0.507.0",
     "node-fetch": "^3.3.2",
@@ -35,11 +45,12 @@
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.18.0",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-color": "^2.19.3",
     "react-confetti": "^6.4.0",
     "react-custom-roulette": "^1.4.1",
     "react-dom": "^18.3.1",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "react-konva": "^18.2.10",
