--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-type-animation": "^3.2.0",
     "string-similarity": "^4.0.4",
     "styled-jsx": "^5.1.7",
+    "tailwind-datepicker-react": "^1.4.3",
     "tailwindcss": "^3.4.14",
     "tailwindcss-textshadow": "^2.1.3",
     "three": "^0.152.2",
