--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
   "name": "lifemastery",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
+    "@blocknote/core": "^0.35.0",
+    "@blocknote/mantine": "^0.35.0",
+    "@blocknote/react": "^0.35.0",
     "@cloudinary/react": "^1.14.3",
     "@cloudinary/url-gen": "^1.21.0",
+    "@edgestore/react": "^0.5.3",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.2.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@huggingface/inference": "^3.6.2",
+    "@mantine/core": "^8.2.4",
+    "@mantine/hooks": "^8.2.4",
     "@react-three/drei": "^9.56.15",
     "@react-three/fiber": "^8.13.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -66,6 +72,9 @@
     "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "slate": "^0.118.0",
+    "slate-history": "^0.113.1",
+    "slate-react": "^0.117.4",
     "string-similarity": "^4.0.4",
     "styled-jsx": "^5.1.7",
     "tailwind-datepicker-react": "^1.4.3",
@@ -74,12 +83,14 @@
     "three": "^0.152.2",
     "tsparticles": "^2.12.0",
     "use-image": "^1.1.1",
+    "uuid": "^11.1.0",
     "vanta": "^0.5.24",
     "vis-timeline": "^7.7.3",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-strategies": "^7.3.0",
+    "zod": "^4.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
