--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0"
+    "workbox-strategies": "^7.3.0",
+    "@shikijs/langs-precompiled": "3.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
