--- a/package.json
+++ b/package.json
@@ -97,7 +97,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "postinstall": "sed -i 's/account_id=.*//g' node_modules/@shikijs/langs-precompiled/dist/csharp.mjs"
+
   },
   "eslintConfig": {
     "extends": [
