--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
     "workbox-routing": "^7.3.0",
-    "workbox-strategies": "^7.3.0",
-    "@shikijs/langs-precompiled": "3.11.0"
+    "workbox-strategies": "^7.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -99,7 +98,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "postinstall": "sed -i 's/account_id=.*//g' node_modules/@shikijs/langs-precompiled/dist/csharp.mjs"
-
   },
   "eslintConfig": {
     "extends": [
