--- a/package.json
+++ b/package.json
@@ -96,8 +96,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "postinstall": "sed -i 's/account_id=.*//g' node_modules/@shikijs/langs-precompiled/dist/csharp.mjs"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
